Returned @Invariant tag

--- a/CustomRPC/ErrorReportViewer.resx
+++ b/CustomRPC/ErrorReportViewer.resx
@@ -181,6 +181,7 @@
   </data>
   <data name="richTextBoxReport.Text" xml:space="preserve">
     <value />
+    <comment>@Invariant</comment>
   </data>
   <data name="&gt;&gt;tableLayoutPanel1.Name" xml:space="preserve">
     <value>tableLayoutPanel1</value>
