--- a/CustomRPC/MainForm.pt-BR.resx
+++ b/CustomRPC/MainForm.pt-BR.resx
@@ -441,4 +441,34 @@ Para ter efeito, ambos os campos devem ser maiores que 0.</value>
   <data name="labelType.ToolTip" xml:space="preserve">
     <value>Tipo de atividade para a presença.</value>
   </data>
+  <data name="labelName.ToolTip" xml:space="preserve">
+    <value>O nome do aplicativo.</value>
+  </data>
+  <data name="radioButtonLastConnection.Text" xml:space="preserve">
+    <value>Desde a última conexão</value>
+  </data>
+  <data name="radioButtonLastConnection.ToolTip" xml:space="preserve">
+    <value>Mostra quanto tempo se passou desde a sua última conexão.</value>
+  </data>
+  <data name="labelDetailsURL.ToolTip" xml:space="preserve">
+    <value>Um link que será aberto quando o usuário clicar no texto Detalhes.</value>
+  </data>
+  <data name="labelStateURL.ToolTip" xml:space="preserve">
+    <value>Um link que será aberto quando o usuário clicar no texto Estado.</value>
+  </data>
+  <data name="labelDisplay.ToolTip" xml:space="preserve">
+    <value>Controla qual campo é exibido no texto de status do usuário na lista de membros.</value>
+  </data>
+  <data name="labelSmallURL.ToolTip" xml:space="preserve">
+    <value>Um link que será aberto quando o usuário clicar na imagem pequena.</value>
+  </data>
+  <data name="labelLargeURL.ToolTip" xml:space="preserve">
+    <value>Um link que será aberto quando o usuário clicar na imagem grande.</value>
+  </data>
+  <data name="labelTimestampStart.Text" xml:space="preserve">
+    <value>Começar</value>
+  </data>
+  <data name="checkBoxTimestampEnd.Text" xml:space="preserve">
+    <value>Fim</value>
+  </data>
 </root>
