--- a/CustomRPC/UpdatePrompt.es.resx
+++ b/CustomRPC/UpdatePrompt.es.resx
@@ -128,13 +128,13 @@
     <value>234, 14</value>
   </data>
   <data name="labelQuestion.Text" xml:space="preserve">
-    <value>¿Te gustaría descargar esta actualización?</value>
+    <value>¿Desea descargar esta actualización?</value>
   </data>
   <data name="checkBoxNeverNotify.Size" type="System.Drawing.Size, System.Drawing">
     <value>219, 18</value>
   </data>
   <data name="checkBoxNeverNotify.Text" xml:space="preserve">
-    <value>No buscar actualizaciones de nuevo</value>
+    <value>No volver a buscar actualizaciones</value>
   </data>
   <data name="labelVersionsText.Text" xml:space="preserve">
     <value>Versión Actual:
